--- a/dev/html/board/list.pug
+++ b/dev/html/board/list.pug
@@ -45,18 +45,21 @@ block contents
                                         option(value="") 옵션2
                                 .form-box
                                     select(name="") 
-                                        option(value="") 공연/전시일
+                                        option(value="") 분야 전체
                                         option(value="") 옵션1
                                         option(value="") 옵션2
                                 .form-box
                                     select(name="") 
-                                        option(value="") 제목
+                                        option(value="") 전체
                                         option(value="") 옵션1
                                         option(value="") 옵션2
                                 .search-input
                                     input(type="text" placeholder="검색어를 입력하세요.")
                                     button(type="button").btn-search
                                         span.hide-txt 검색
+                                .form-btn
+                                    button(type="button").btn-write
+                                        span.txt 글쓰기
                         .area-table.type01
                             table
                                 caption 문화마루
@@ -83,7 +86,49 @@ block contents
                                         td 관리자
                                         td.mont 2019-09-30
                                     tr 
-                                        td 7119
+                                        td.mont 7119
+                                        td 문화마루
+                                        td.align-left 
+                                            a(href="#") [공연·전시] 문화초대이벤트 당첨으로 옥탑방 고양이를 보고 왔습니다.
+                                        td 밀꼬마
+                                        td.mont 2019-09-30
+                                    tr 
+                                        td.mont 7119
+                                        td 문화마루
+                                        td.align-left 
+                                            a(href="#") [공연·전시] 문화초대이벤트 당첨으로 옥탑방 고양이를 보고 왔습니다.
+                                        td 밀꼬마
+                                        td.mont 2019-09-30
+                                    tr 
+                                        td.mont 7119
+                                        td 문화마루
+                                        td.align-left 
+                                            a(href="#") [공연·전시] 문화초대이벤트 당첨으로 옥탑방 고양이를 보고 왔습니다.
+                                        td 밀꼬마
+                                        td.mont 2019-09-30
+                                    tr 
+                                        td.mont 7119
+                                        td 문화마루
+                                        td.align-left 
+                                            a(href="#") [공연·전시] 문화초대이벤트 당첨으로 옥탑방 고양이를 보고 왔습니다.
+                                        td 밀꼬마
+                                        td.mont 2019-09-30
+                                    tr 
+                                        td.mont 7119
+                                        td 문화마루
+                                        td.align-left 
+                                            a(href="#") [공연·전시] 문화초대이벤트 당첨으로 옥탑방 고양이를 보고 왔습니다.
+                                        td 밀꼬마
+                                        td.mont 2019-09-30
+                                    tr 
+                                        td.mont 7119
+                                        td 문화마루
+                                        td.align-left 
+                                            a(href="#") [공연·전시] 문화초대이벤트 당첨으로 옥탑방 고양이를 보고 왔습니다.
+                                        td 밀꼬마
+                                        td.mont 2019-09-30
+                                    tr 
+                                        td.mont 7119
                                         td 문화마루
                                         td.align-left 
                                             a(href="#") [공연·전시] 문화초대이벤트 당첨으로 옥탑방 고양이를 보고 왔습니다.
