--- a/dev/html/space/facility.pug
+++ b/dev/html/space/facility.pug
@@ -157,9 +157,36 @@ block contents
                                         th 상세정보
                                 tbody
                                     tr 
-                                        // 왼쪽정렬 : .align-left
-                                        // 볼드 : .bold
-                                        // 영문폰트 : .mont
+                                        td.align-left
+                                            .txt-icon
+                                                i.ico-picker02.on(aria-hidden="true")
+                                                span 서울메트로미술관
+                                        td 서울특별시 종로구 사직로 지하 130
+                                        td.mont 2022-11-16 ~ 2022-11-24	
+                                        td
+                                            a(href="#none").link-more
+                                                span.txt 자세히 보기
+                                    tr 
+                                        td.align-left
+                                            .txt-icon
+                                                i.ico-picker02.on(aria-hidden="true")
+                                                span 서울메트로미술관
+                                        td 서울특별시 종로구 사직로 지하 130
+                                        td.mont 2022-11-16 ~ 2022-11-24	
+                                        td
+                                            a(href="#none").link-more
+                                                span.txt 자세히 보기
+                                    tr 
+                                        td.align-left
+                                            .txt-icon
+                                                i.ico-picker02.on(aria-hidden="true")
+                                                span 서울메트로미술관
+                                        td 서울특별시 종로구 사직로 지하 130
+                                        td.mont 2022-11-16 ~ 2022-11-24	
+                                        td
+                                            a(href="#none").link-more
+                                                span.txt 자세히 보기
+                                    tr 
                                         td.align-left
                                             .txt-icon
                                                 i.ico-picker02.on(aria-hidden="true")
