--- a/dev/_codinglist/_cl02.pug
+++ b/dev/_codinglist/_cl02.pug
@@ -155,6 +155,20 @@
         ],
         [
             "", /* 0. 뎁스1 */
+            "카드뉴스", /* 1. 뎁스2 */
+            "", /* 2. 뎁스3 */
+            "", /* 3. 뎁스4 */
+            "", /* 4. 뎁스5 */
+            "", /* 5. page(ID) */
+            "culturetv/cardnewsList.html", /* 6. path */
+            "", /* 7. 완료일 */
+            "", /* 8. 상태 */
+            [
+                ["", ""],
+            ],
+        ],
+        [
+            "", /* 0. 뎁스1 */
             "문화마루", /* 1. 뎁스2 */
             "", /* 2. 뎁스3 */
             "", /* 3. 뎁스4 */
